--- a/public/page.html
+++ b/public/page.html
@@ -17,6 +17,11 @@
             <input type="checkbox" id="spanish" name="language" value="spanish">
             Spanish
         </label>
+        <label for="questionId">Select Question ID:</label>
+        <select id="questionId" name="questionId">
+            <option value="1">1</option>
+            <option value="2">2</option>
+        </select>    
     </form>
     <textarea id="output" rows="10" cols="50" placeholder="Output will be displayed here..."></textarea>
 </body>
