--- a/html/voting.html
+++ b/html/voting.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Player Voting</title>
+    <link rel="stylesheet" href="../css/background.css">
+    <link rel="stylesheet" href="../css/voting.css">
     <script src="../javascript/voting.js" defer></script>
 </head>
 <body>
+    <div class="background"></div>
     <h1>Vote for the odd one out</h1>
     <form id="votingForm">
         <input type="hidden" id="currentPlayer" value="1">
