Created the name form page which allows the user to enter their names.

--- a/html/categories.html
+++ b/html/categories.html
@@ -4,9 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categories</title>
     <link rel="stylesheet" href="/ThematicProject/css/categories.css">
+    <link rel="stylesheet" href="/ThematicProject/css/background.css">
 </head>
 <body>
-    <div id="category-container">
+
+    <div  id="category-container">
         <a class="category category1" href="something.html"><div>
             <h1 id="category1-title">FOODS</h1></div>
         </a>
@@ -22,8 +24,8 @@
         <a class="category category4" href="something.html"><div>
             <h1 id="category4-title">JOBS</h1></div>
         </a>
-
-
     </div>
+
+</div>
 </body>
 </html>
