Changed the src tag in the categories page to nothing for future use

--- a/html/categories.html
+++ b/html/categories.html
@@ -9,19 +9,19 @@
 <body>
 
     <div  id="category-container">
-        <a class="category category1" href="something.html"><div>
+        <a class="category category1" href=""><div>
             <h1 id="category1-title">FOODS</h1></div>
         </a>
 
-        <a class="category category2" href="something.html"><div>
+        <a class="category category2" href=""><div>
             <h1 id="category2   -title">LOCATIONS</h1></div>
         </a>
 
-        <a class="category category3" href="something.html"><div>
+        <a class="category category3" href=""><div>
             <h1 id="category3-title">ANIMALS</h1></div>
         </a>
 
-        <a class="category category4" href="something.html"><div>
+        <a class="category category4" href=""><div>
             <h1 id="category4-title">JOBS</h1></div>
         </a>
     </div>
