Small change to form, adding a line that clears the input field

--- a/html/name.html
+++ b/html/name.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/ThematicProject/css/background.css">
     <link rel="stylesheet" href="/ThematicProject/css/name.css">
     <script src="/ThematicProject/javascript/name.js"></script>
-    <title>Hi</title>
+    <title>Who will be playing today?</title>
 </head>
 <body>
     <div class="background">
