Adjusted the file directory to work with the firebase file structure

--- a/public/startpage.html
+++ b/public/startpage.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/startpage.css" />
+    <link rel="stylesheet" href="./css/startpage.css" />
 </head>
 <body>
     <div class="background"></div>
     <div class="content">
-        <img class="title-image" src="../images/title1.png" alt="TI">
+        <img class="title-image" src="./images/title1.png" alt="TI">
         <div class="button1">
             <button id="singleDevice">Single Device</button>
         </div>
@@ -17,7 +17,7 @@
 
     <!-- Settings Icon -->
     <div class="menu-icon" onclick="toggleMenu()">
-        <img class="settings-image" src="../images/sticon1.png" alt="SI">
+        <img class="settings-image" src="./images/sticon1.png" alt="SI">
     </div>
 
     <!-- Main Menu Overlay -->
@@ -66,6 +66,6 @@
         <button onclick="closeSubMenu()">Back</button>
     </div>
 
-    <script src="../javascript/menu.js"></script>
+    <script src="./javascript/menu.js"></script>
 </body>
 </html>
