--- a/public/voting.html
+++ b/public/voting.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Player Voting</title>
-    <link rel="stylesheet" href="../css/background.css">
-    <link rel="stylesheet" href="../css/voting.css">
-    <script src="../javascript/voting.js" defer></script>
+    <link rel="stylesheet" href="./css/background.css">
+    <link rel="stylesheet" href="./css/voting.css">
+    <script src="./javascript/voting.js" defer></script>
 </head>
 <body>
     <div class="background"></div>
