--- a/public/name.html
+++ b/public/name.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/ThematicProject/css/background.css">
-    <link rel="stylesheet" href="/ThematicProject/css/name.css">
-    <script src="/ThematicProject/javascript/name.js"></script>
+    <link rel="stylesheet" href="./css/background.css">
+    <link rel="stylesheet" href="./css/name.css">
+    <script src="./javascript/name.js"></script>
     <title>Who will be playing today?</title>
 </head>
 <body>
