Change file path for some pages

--- a/public/categories.html
+++ b/public/categories.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categories</title>
-    <link rel="stylesheet" href="/ThematicProject/css/categories.css">
-    <link rel="stylesheet" href="/ThematicProject/css/background.css">
+    <link rel="stylesheet" href="./css/categories.css">
+    <link rel="stylesheet" href="./css/background.css">
 </head>
 <body>
 
