Created custom alerts + changed some logic in validation

--- a/public/name.html
+++ b/public/name.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <div class="background">
+
+        <div id="error-container"> 
+            <h1 id="error-msg"></h1> 
+        </div>
+        
         <div id="form-container">
             <form id="name-form" action="">
                 <label id="name-label" for="name">Who will be playing today?</label>
