'single device' button on startpage links to inputting names page.

--- a/public/startpage.html
+++ b/public/startpage.html
@@ -9,11 +9,9 @@
     <div class="content">
         <img class="title-image" src="./images/title1.png" alt="TI">
         <div class="button1">
-            <button id="singleDevice">Single Device</button>
+            <button id="singleDevice" onclick="location.href='name.html'">Single Device</button>
         </div>
-        <div class="button2">
-            <button id="multiplayer">Multiplayer</button>
-        </div>
+        
     </div>
 
     <!-- Placeholder for the menu -->
