--- a/public/questions.html
+++ b/public/questions.html
@@ -6,6 +6,7 @@
     <title>Question Page</title>
     <link rel="stylesheet" href="./css/background.css">
     <link rel="stylesheet" href="./css/questions.css">
+    <link rel="stylesheet" href="./css/menu.css">
     <script src="./javascript/questions.js" type="module" defer></script>
 </head>
 <body>
@@ -19,5 +20,16 @@
         </div>
         <button id="nextButton">Next</button>
     </div>
+
+    <!-- Menu -->
+    <div id="menuContainer"></div>
+    <script>
+        fetch("menu.html")
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById("menuContainer").innerHTML = html;
+            });
+    </script>
+    <script src="./javascript/menu.js"></script>
 </body>
 </html>
