Fixed styling issue with leaderboard

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/ThematicProject/css/leaderboard.css">
-    <link rel="stylesheet" href="/ThematicProject/css/background.css">
-    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/leaderboard.css">
+    <link rel="stylesheet" href="./css/background.css">
+    <link rel="stylesheet" href="./css/main.css">
 
 
     <script src="voting.js"></script>
