Local storage will be cleared when the single player button has been clicked.

--- a/public/startpage.html
+++ b/public/startpage.html
@@ -9,7 +9,7 @@
     <div class="content">
         <img class="title-image" src="./images/title1.png" alt="TI">
         <div class="button1">
-            <button id="singleDevice" onclick="location.href='name.html'">Single Device</button>
+            <button id="singleDevice" onclick="location.href='name.html';clearStorage();">Single Device</button>
         </div>
         
     </div>
