--- a/public/name.html
+++ b/public/name.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/background.css">
     <link rel="stylesheet" href="./css/name.css">
     <link rel="stylesheet" href="./css/menu.css">
@@ -18,9 +19,8 @@
     
     <div id="form-container">
         <form id="name-form" action="">
-            <label id="name-label" for="name">Who will be playing today?</label>
-            <input class="name name-input" id="name-input" type="text" placeholder="Enter your name here!" autocomplete="off">
-            <button type="submit" id="name-btn">Enter</button>
+                <input class="name name-input" id="name-input" type="text" placeholder="Enter your name here!" autocomplete="off">
+                <button type="submit" id="name-btn">Enter</button>
         </form>
     </div>
 
