--- a/public/name.html
+++ b/public/name.html
@@ -20,10 +20,9 @@
     <div id="form-container">
         <form id="name-form" action="">
                 <input class="name name-input" id="name-input" type="text" placeholder="Enter your name here!" autocomplete="off">
-                <button type="submit" id="name-btn">Enter</button>
         </form>
     </div>
-
+    <button id="name-btn">Play</button>
     <div id="names-container">
         <div class="placeholder"><h1 id="placeholder1">placeholder</h1></div>
         <div class="placeholder"><h1 id="placeholder2">placeholder</h1></div>
@@ -35,7 +34,6 @@
         <div class="placeholder"><h1 id="placeholder8">placeholder</h1></div>
     </div>
 
-    <button id="play-btn">Play</button>
 
     <!-- Menu -->
     <div id="menuContainer"></div>
