made changes to pages

--- a/public/voting.html
+++ b/public/voting.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="background"></div>
-    <h1>Vote for the odd one out</h1>
+    <h1 id="currentPlayerName">Player Voting</h1>
+    <h2>Vote for the odd one out</h2>
     <form id="votingForm">
         <input type="hidden" id="currentPlayer" value="1">
         <div id="playerOptions"></div>
