load it in to local storage it now works :)

--- a/public/oddOneChoose.html
+++ b/public/oddOneChoose.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/oddOneChoose.css">
     <link rel="stylesheet" href="./css/background.css">
-    <script src="./javascript/oddOneChoose.js" defer></script>
+    <script type="module" src="./javascript/oddOneChoose.js"></script>
 </head>
 <body>
     <div class="background"></div>
